--- a/encryption/pom.xml
+++ b/encryption/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
+  <groupId>symmetric</groupId>
   <artifactId>encryption</artifactId>
 
   <dependencies>
