--- a/encryption/pom.xml
+++ b/encryption/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>marco</groupId>
-    <artifactId>java-catalogue</artifactId>
+    <artifactId>java-learning</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
