--- a/concurrency/pom.xml
+++ b/concurrency/pom.xml
@@ -10,9 +10,15 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>multiThreading</artifactId>
+  <artifactId>concurrency</artifactId>
 
   <dependencies>
 
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
